<resources>
    <string name="app_name">Fitness Tracker</string>

    <string name="label_imc">IMC</string>
    <string name="desc_imc">IMC é a sigla para Índice de Massa Corporal que serve para avaliar o peso do indivíduo em relação à sua altura e assim indicar se está dentro do peso ideal, acima ou abaixo do peso desejado.\n\nPreencha os campos de peso e altura para descobrir o seu IMC</string>

    <string name="label_tmb">TMB</string>
    <string name="desc_tmb">TMB é o cálculo para descobrir a quantidade calórica que o corpo necessita com base no seu estilo de vida</string>

    <string name="weight">Peso (Kg)</string>
    <string name="height">Altura (m)</string>
    <string name="age">Idade</string>
    <string name="calcu">Calcular</string>

    <string name="result_imc">IMC: %1$.2f</string>
    <string name="result_tmb">Tmb: %1$.2f</string>

    <string name="imc_severely_low_weight">Severamente abaixo do peso</string>
    <string name="imc_very_low_weight">Muito abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="normal">Normal</string>
    <string name="imc_high_weight">Acima do peso</string>
    <string name="imc_so_high_weight">Moderadamente obeso</string>
    <string name="imc_severely_high_weight">Severamente obeso</string>
    <string name="imc_extreme_weight">Extremamente obeso</string>

    <string name="save">Salvar</string>
    <string name="search">Buscar</string>
    <string name="update">Editar</string>
    <string name="cancel">Cancelar</string>
    <string name="atencao">Atenção</string>

    <string name="calc_saved">Registro salvo com sucesso</string>
    <string name="calc_removed">Registro removido com sucesso</string>
    <string name="delete_message">Você realmente quer excluir o registro?</string>
    <string name="fields_messages">Todos os campos devem ser maiores do que zero</string>
    <string name="update_message">Você realmente quer editar esse registro</string>
    <string name="calc_update">Editado com sucesso</string>


    <string name="todo">TODO</string>
    <string name="result_list">Resultado: %.2f; Data: %s</string>
    <string name="see_list_calcu">Ver lista de resultados</string>

    <string name="sex">Sexo:</string>
    <string name="masculine">Masculino</string>
    <string name="feminine">Feminino</string>
    <string name="taxa">Selecione uma taxa de exercícios</string>

    <string name="vazio"> </string>

</resources>