<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ImcActivity">

        <TextView
            style="@style/TextViewForm"
            android:text="@string/desc_imc" />

        <EditText
            android:id="@+id/edit_text_weight_imc"
            style="@style/EditTextForm"
            android:hint="@string/weight"
            android:autofillHints="phone" />

        <EditText
            android:id="@+id/edit_text_height_imc"
            style="@style/EditTextForm"
            android:hint="@string/height"
            android:autofillHints="phone"/>

        <Button
            android:id="@+id/btn_calcu_imc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcu"/>

    </LinearLayout>

</ScrollView>